Remove duplicate JVM argument